# amadla-iac-ce

./: .gitattributes  .gitignore  .pairs  CHANGELOG.rst  LICENSE  PYTHON_VERSION  README.fr.md  README.md  pyproject.toml
.changes/: 1.0.0.json
.github/ISSUE_TEMPLATE/: config.yml  source-distribution.yml
.github/workflows/: deploy.yml  documentation.yml  install.yml  readme.yml  test.yml
amadlacli/: app.py
amadlacli/cli/: __init__.py  entity.py  schema.py  template.py
amadlacli/extensions/click/: register.py
amadlacli/extensions/jinja2/: extends.py
amadlacli/utils/: dict.py  pyproject.py
docs/assets/diagrams/: cascading_configs.d2  combined-tools.d2  deploy.d2  gather_secrets.d2  generate_vars_files.d2  merge_config_to_amadla_lock.d2  structure.d2
docs/source/: conf.py
docs/source/en/: README.rst  dev.rst  how-it-works.rst  index.rst  quickstart.rst
docs/source/fr/: README.rst  ci-cd.rst  dev.rst  index.rst  setup.rst
tests/: test_app.py
tests/utils/: test_dict.py  test_pyproject.py
